refactor: fingerprint removal, package migration and toolchain upgrade
- Remove all Portal fingerprints (package, log tags, resources, native symbols)
- Migrate moe/fuqiuluo/* directory structure to com/system/location/service/*
- Rename Portal application class to LocationServiceApp
- Fix CI workflows: branch master -> main, update naming
- Upgrade toolchain: Gradle 9.7.0, AGP 9.3.1, Kotlin 2.4.10, compileSdk 37
- Upgrade AndroidX and third-party dependencies to latest stable
- Remove dead dependencies (firebase/refine/okhttp/serialization/etc)
- Rewrite README with current toolchain and fingerprint-removal highlights